--- a/index.css
+++ b/index.css
@@ -1,20 +1,86 @@
 html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  color: #1f2937;
+  background-color: #f3f4f6;
+}
+
+/* Header */
+
+header {
+  position: absolute;
+  right: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.nav-wrapper {
+  display: flex;
+  padding: 0.5rem 0;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  max-width: 80rem;
+}
+
+.nav-wrapper img {
+  object-fit: contain;
+  height: 0.75rem;
+}
+
+nav {
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: #ffffff;
+}
+
+/* Hero */
+
+.hero-section {
+  height: 100vh;
+  width: 100%;
+  color: #ffffff;
 }
 
 .hero-item {
   position: relative;
-  flex: 0 0 400px;
   text-align: center;
-  transition: flex 0.5s;
-  height: 100%;
   cursor: pointer;
+  transition: height 0.5s;
+  width: 100%;
+  height: 25%;
 }
 
 .hero-item.expanded {
-  flex: 1;
+  width: 100%;
+  height: 50%;
   cursor: default;
+}
+
+.hero-item img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: -10;
+}
+
+.hero-item__name {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .hero-item-overlay {
@@ -43,10 +109,156 @@ a:hover {
 }
 
 section {
-  margin-bottom: 8rem;
+  margin-bottom: 4rem;
+}
+
+.video-section {
+  display: flex;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  flex-direction: column;
+  gap: 2.5rem;
+  align-items: center;
+  max-width: 80rem;
+  margin: auto;
+}
+
+.video-section > p {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  /* text-align: center; */
+}
+
+.video-section > video {
+  aspect-ratio: 16 / 9;
+  width: 100%;
 }
 
 #map {
   height: 100%;
   height: 400px;
+}
+
+.blog-grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.blog-grid-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.blog-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.blog-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 10px;
+  transform: translateY(15%);
+  display: flex;
+  flex-direction: column;
+  color: white;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.blog-overlay {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 35%;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+
+.blog-content h3 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+.blog-content p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.blog-read-more {
+  opacity: 0;
+  transition: opacity 0.3s;
+  border: 1px solid white;
+  padding: 4px 8px;
+  display: block;
+  width: fit-content;
+}
+
+.blog-grid-item:hover .blog-content {
+  transform: translateY(-15%);
+}
+
+.blog-grid-item:hover .blog-content h3 {
+  padding: 10px 0;
+  font-weight: 500;
+}
+
+.blog-grid-item:hover .blog-read-more {
+  opacity: 1;
+}
+
+@media only screen and (min-width: 640px) {
+  .nav-wrapper {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-item {
+    width: 25%;
+    height: 100%;
+    transition: width 0.5s;
+  }
+  .hero-item.expanded {
+    width: 50%;
+    height: 100%;
+  }
+  .hero-item__name {
+    bottom: 7rem;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+  .nav-wrapper {
+    padding: 1.5rem 1rem;
+  }
+  .nav-wrapper img {
+    height: 2.5rem;
+  }
+  nav {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    gap: 1.5rem;
+  }
+  section {
+    margin-bottom: 4rem;
+  }
+  .video-section > p {
+    font-size: 1.875rem;
+    /* line-height: 2.25rem; */
+    /* line-height: 1.625; */
+    /* max-width: 80%; */
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .nav-wrapper {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
